--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+<!--HEADER-->
+<header class="header">
+    <div class="container">
+        <div class="nav l">
+            <span class="logo">LOGO</span>
+            <span class="link l">LINK LINK LINK LINK</span>
+        </div>
+        <div class="nav r">
+            <span class="link r">LINK LINK LINK LINK</span>
+            <span class="button">LOGO</span>
+        </div>
+    </div>
+</header>
+<main>
+    <section class="all-you-need">
+        <div class="container">
+            <div class="all-you-need title"></div>
+            
+        </div>
+    </section>
+</main>
 
 <body>
 
