add first section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
     <section class="all-you-need">
         <div class="container">
             <div class="all-you-need title"></div>
-            
+            <div class="all-you-need content">
+                <p class="all-you-need text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum saepe
+                    praesentium eveniet obcaecati numquam quae velit aut sapiente aliquam nam nesciunt officia, autem
+                    possimus facilis, quis, commodi iste iusto ut?</p>
+                <div class="all-you-need img"></div>
+            </div>
         </div>
     </section>
 </main>
