--- a/index.html
+++ b/index.html
@@ -35,6 +35,27 @@
             </div>
         </div>
     </section>
+    <section class="business-plane">
+        <div class="container">
+            <div class="business-plane title">Lorem ipsum dolor sit amet.</div>
+            <div class="input"></div>
+            <div class="plane">
+                <div class="card-container">
+                    <div class="card-header">epiu4èo</div>
+                    <div class="card-body"></div>
+                </div>
+                <div class="card-container">
+                    <div class="card-header">ouiyp9iu</div>
+                    <div class="card-body"></div>
+                </div>
+                <div class="card-container">
+                    <div class="card-header">ohpiuh</div>
+                    <div class="card-body"></div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 </main>
 
 <body>
