add second section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
                 </div>
 
             </div>
+            <div class="team-container">
+                <div class="team-header">titolo</div>
+                <div class="body-header">wiuu</div>
+            </div>
+        </div>
+    </section>
+    <section class="partner">
+        <div class="container">
+            <div class="column-l"></div>
+            <div class="column-s"></div>
         </div>
     </section>
 </main>
