--- a/index.html
+++ b/index.html
@@ -66,6 +66,37 @@
             <div class="column-s"></div>
         </div>
     </section>
+    <section class="option">
+        <div class="container">
+            <div class="option-title"></div>
+            <div class="option-container">
+                <div class="option-card">
+                    <div class="card-img"></div>
+                    <div class="card-desctiption"></div>
+                </div>
+                <div class="option-card">
+                    <div class="card-img"></div>
+                    <div class="card-desctiption"></div>
+                </div>
+                <div class="option-card">
+                    <div class="card-img"></div>
+                    <div class="card-desctiption"></div>
+                </div>
+                <div class="option-card">
+                    <div class="card-img"></div>
+                    <div class="card-desctiption"></div>
+                </div>
+                <div class="option-card">
+                    <div class="card-img"></div>
+                    <div class="card-desctiption"></div>
+                </div>
+                <div class="option-card">
+                    <div class="card-img"></div>
+                    <div class="card-desctiption"></div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 
 <body>
