--- a/index.html
+++ b/index.html
@@ -97,6 +97,18 @@
             </div>
         </div>
     </section>
+    <section class="boh">
+        <div class="container">
+
+        </div>
+    </section>
+    <section class="bunner">
+        <div class="container">
+            <div class="column-l"></div>
+            <div class="column-center"></div>
+            <div class="column-l"></div>
+        </div>
+    </section>
 </main>
 
 <body>
