--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -30,7 +34,7 @@
                 <li class="nav-link"><a href="#">Accedi</a></li>
                 <li class="nav-link"><button class="btn accedi">Accedi</button></li>
             </ul>
-            
+
         </div>
 
     </div>
@@ -38,22 +42,30 @@
 
 </header>
 <main>
-    <!--First section-->
-    <section class="all-you-need">
+    <!--hero section-->
+    <section class="hero">
         <div class="container">
-            <div class="all-you-need title"></div>
-            <div class="all-you-need content">
-                <p class="all-you-need text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum saepe
-                    praesentium eveniet obcaecati numquam quae velit aut sapiente aliquam nam nesciunt officia, autem
-                    possimus facilis, quis, commodi iste iusto ut?</p>
-                <div class="all-you-need img"></div>
+            <h1 class="hero title">Tutto ciò che ti serve per il lavoro, in un unico posto.</h1>
+            <div class="hero content">
+                <div class="hero-text-container">
+                    <p class="hero text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum saepe
+                        praesentium eveniet obcaecati numquam quae velit aut sapiente aliquam nam nesciunt officia, autem
+                        possimus facilis, quis, commodi iste iusto ut?</p>
+                    <button class="btn hero">Inizia la tua prova gratuita</button>
+                    <p class="hero text">Annulla in qualsiasi momento.</p>
+                </div>
+                
+                <div class="hero img"></div>
             </div>
         </div>
     </section>
+    <!--first section-->
     <section class="business-plane">
         <div class="container">
-            <div class="business-plane title">Lorem ipsum dolor sit amet.</div>
-            <div class="input"></div>
+            <h1 class="business-plane title">Trova il piano business che fa per te.</h1>
+            <input type="radio" value="Fatturazione mensile" name="fatturazione">Fatturazione mensile
+            <input type="radio" value="Fatturazione annuale" name="fatturazione">Fatturazione annuale 
+
             <div class="plane">
                 <div class="card-container">
                     <div class="card-header">epiu4èo</div>
