--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <header class="header">
     <div class="container">
         <div class="nav-left">
-            <img src="./img/logo-small.png" alt="logo">
+            <img src="./img/logo-small.png" alt="logo" class="logo-header">
 
             <ul class="link">
                 <li class="nav-link"><a href="#">Perchè Dropbox</a></li>
@@ -49,13 +49,14 @@
             <div class="hero content">
                 <div class="hero-text-container">
                     <p class="hero text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum saepe
-                        praesentium eveniet obcaecati numquam quae velit aut sapiente aliquam nam nesciunt officia, autem
+                        praesentium eveniet obcaecati numquam quae velit aut sapiente aliquam nam nesciunt officia,
+                        autem
                         possimus facilis, quis, commodi iste iusto ut?</p>
                     <button class="btn hero">Inizia la tua prova gratuita</button>
                     <p class="hero text">Annulla in qualsiasi momento.</p>
                 </div>
-                
-                <div class="hero img"></div>
+
+                <!--<img src="./img/jumbo.png" alt="jumbo" class="hero img">-->
             </div>
         </div>
     </section>
@@ -64,20 +65,64 @@
         <div class="container">
             <h1 class="business-plane title">Trova il piano business che fa per te.</h1>
             <input type="radio" value="Fatturazione mensile" name="fatturazione">Fatturazione mensile
-            <input type="radio" value="Fatturazione annuale" name="fatturazione">Fatturazione annuale 
+            <input type="radio" value="Fatturazione annuale" name="fatturazione">Fatturazione annuale
 
             <div class="plane">
                 <div class="card-container">
-                    <div class="card-header">epiu4èo</div>
-                    <div class="card-body"></div>
+                    <div class="card-header">
+                        <h1>Singolo</h1>
+                    </div>
+                    <div class="card-body">
+                        <h2 class="title-card">Professional</h2>
+                        <p class="price">&euro;12.00</p>
+                        <p class="duration">/mese</p>
+                        <ul>
+                            <li class="card-items">1 Utente</li>
+                            <li class="card-items">5 TB di spazio di archiviazione</li>
+                            <li class="card-items">funzioni di produttività premium e condivisione file semplice e
+                                sicura </li>
+                        </ul>
+                        <button class="btn card">Prova gratis per 30 giorni</button>
+                        <p class="link card">oppure <a href="#">acquista ora</a>
+                        </p>
+                    </div>
                 </div>
                 <div class="card-container">
-                    <div class="card-header">ouiyp9iu</div>
-                    <div class="card-body"></div>
+                    <div class="card-header">
+                        <h1>Singolo</h1>
+                    </div>
+                    <div class="card-body">
+                        <h2 class="title-card">Professional</h2>
+                        <p class="price">&euro;12.00</p>
+                        <p class="duration">/mese</p>
+                        <ul>
+                            <li class="card-items">1 Utente</li>
+                            <li class="card-items">5 TB di spazio di archiviazione</li>
+                            <li class="card-items">funzioni di produttività premium e condivisione file semplice e
+                                sicura </li>
+                        </ul>
+                        <button class="btn card">Prova gratis per 30 giorni</button>
+                        <p class="link card">oppure<a href="#">acquista ora</a>
+                        </p>
+                    </div>
                 </div>
                 <div class="card-container">
-                    <div class="card-header">ohpiuh</div>
-                    <div class="card-body"></div>
+                    <div class="card-header">
+                        <h1>Singolo</h1>
+                    </div>
+                    <div class="card-body">
+                        <h2 class="title-card">Professional</h2>
+                        <p class="price">&euro;12.00</p>
+                        <p class="duration">/mese</p>
+                        <ul>
+                            <li class="card-items">1 Utente</li>
+                            <li class="card-items">5 TB di spazio di archiviazione</li>
+                            <li class="card-items">funzioni di produttività premium e condivisione file semplice e
+                                sicura </li>
+                        </ul>
+                        <button class="btn card">Prova gratis per 30 giorni</button>
+                        <p class="link card">oppure <a href="#">acquista ora</a>
+                        </p>
                 </div>
 
             </div>
