--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
                         <button class="btn card">Prova gratis per 30 giorni</button>
                         <p class="link card">oppure <a href="#">acquista ora</a>
                         </p>
+                        <h2>Punti salienti del piano</h2>
+                        <ul>
+                            <li class="card-items"></li>
+                            <li class="card-items">Lorem, ipsum dolor.</li>
+                            <li class="card-items">Lorem ipsum dolor sit.</li>
+                            <li class="card-items">Lorem ipsum dolor sit amet.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card-container">
@@ -104,6 +111,13 @@
                         <button class="btn card">Prova gratis per 30 giorni</button>
                         <p class="link card">oppure<a href="#">acquista ora</a>
                         </p>
+                        <h2>Punti salienti del piano</h2>
+                        <ul>
+                            <li class="card-items"></li>
+                            <li class="card-items">Lorem, ipsum dolor.</li>
+                            <li class="card-items">Lorem ipsum dolor sit.</li>
+                            <li class="card-items">Lorem ipsum dolor sit amet.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card-container">
@@ -123,21 +137,49 @@
                         <button class="btn card">Prova gratis per 30 giorni</button>
                         <p class="link card">oppure <a href="#">acquista ora</a>
                         </p>
-                </div>
+                        <h2>Punti salienti del piano</h2>
+                        <ul>
+                            <li class="card-items"></li>
+                            <li class="card-items">Lorem, ipsum dolor.</li>
+                            <li class="card-items">Lorem ipsum dolor sit.</li>
+                            <li class="card-items">Lorem ipsum dolor sit amet.</li>
+                        </ul>
+                    </div>
 
+                </div>
             </div>
-            <div class="team-container">
-                <div class="team-header">titolo</div>
-                <div class="body-header">wiuu</div>
+    </section>
+    <!-- second section-->
+    <section class="team">
+        <div class="container">
+            <div class="team-header">team</div>
+            <div class="team-body">
+                <div class="column-l">
+                    <h2>Enterprice</h2>
+                    <h3>Contatta l'ufficio vendita per i prezzi</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, soluta totam. Odio aut itaque
+                        labore.</p>
+                </div>
+                <div class="column-s">
+                    <button class="btn team">Contatta l'ufficio vendite </button>
+                </div>
             </div>
         </div>
     </section>
+    <!-- third section-->
     <section class="partner">
         <div class="container">
             <div class="column-l"></div>
-            <div class="column-s"></div>
+            <div class="column-s">
+                <h1>Entra in contatto con un partner Dropbox</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat suscipit maxime vitae nam odio odit,
+                    libero esse in minus fuga quas, quibusdam perferendis sint modi iure nulla, quae architecto illum!
+                </p>
+                <button class="btn partner">Trova un partner</button>
+            </div>
         </div>
     </section>
+    <!--fourth section-->
     <section class="option">
         <div class="container">
             <div class="option-title"></div>
