--- a/index.html
+++ b/index.html
@@ -181,39 +181,73 @@
     </section>
     <!--fourth section-->
     <section class="option">
+
         <div class="container">
-            <div class="option-title"></div>
+            <div class="option-title">
+                <h1>Esegui più operazioni con DropBox Business</h1>
+            </div>
             <div class="option-container">
                 <div class="option-card">
                     <div class="card-img"></div>
-                    <div class="card-desctiption"></div>
+                    <div class="card-desctiption">
+                        <h2>Passa di meno da uno strumento all'altro</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nemo. Recusandae
+                            facilis dolorum quod molestias, ipsa enim illum dolor totam inventore non vitae ducimus quae
+                            excepturi voluptatum veritatis ipsum quibusdam.</p>
+                    </div>
                 </div>
                 <div class="option-card">
                     <div class="card-img"></div>
-                    <div class="card-desctiption"></div>
+                    <div class="card-desctiption">
+                        <h2>Passa di meno da uno strumento all'altro</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nemo. Recusandae
+                            facilis dolorum quod molestias, ipsa enim illum dolor totam inventore non vitae ducimus quae
+                            excepturi voluptatum veritatis ipsum quibusdam.</p>
+                    </div>
                 </div>
                 <div class="option-card">
                     <div class="card-img"></div>
-                    <div class="card-desctiption"></div>
+                    <div class="card-desctiption">
+                        <h2>Passa di meno da uno strumento all'altro</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nemo. Recusandae
+                            facilis dolorum quod molestias, ipsa enim illum dolor totam inventore non vitae ducimus quae
+                            excepturi voluptatum veritatis ipsum quibusdam.</p>
+                    </div>
                 </div>
                 <div class="option-card">
                     <div class="card-img"></div>
-                    <div class="card-desctiption"></div>
+                    <div class="card-desctiption">
+                        <h2>Passa di meno da uno strumento all'altro</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nemo. Recusandae
+                            facilis dolorum quod molestias, ipsa enim illum dolor totam inventore non vitae ducimus quae
+                            excepturi voluptatum veritatis ipsum quibusdam.</p>
+                    </div>
                 </div>
                 <div class="option-card">
                     <div class="card-img"></div>
-                    <div class="card-desctiption"></div>
+                    <div class="card-desctiption">
+                        <h2>Passa di meno da uno strumento all'altro</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nemo. Recusandae
+                            facilis dolorum quod molestias, ipsa enim illum dolor totam inventore non vitae ducimus quae
+                            excepturi voluptatum veritatis ipsum quibusdam.</p>
+                    </div>
                 </div>
                 <div class="option-card">
                     <div class="card-img"></div>
-                    <div class="card-desctiption"></div>
+                    <div class="card-desctiption">
+                        <h2>Passa di meno da uno strumento all'altro</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nemo. Recusandae
+                            facilis dolorum quod molestias, ipsa enim illum dolor totam inventore non vitae ducimus quae
+                            excepturi voluptatum veritatis ipsum quibusdam.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="boh">
+    <section class="pass">
         <div class="container">
-
+            <h1>Più di 500.000 team utilizzano Dropbox Business</h1>
+            <a href="#">scopri di più sui nostri clienti</a>
         </div>
     </section>
     <section class="bunner">
@@ -236,8 +270,8 @@
         </div>
     </section>
     <section class="ask">
-        <div class="ask-title"></div>
-        <div class="question"></div>
+        <h1 class="ask-title">Domande frequenti</h1>
+        <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?</div>
         <div class="question"></div>
         <div class="question"></div>
     </section>
