add section structure

--- a/index.html
+++ b/index.html
@@ -263,17 +263,26 @@
                 <div class="column-center">ssss</div>
                 <div class="column-right">sssss</div>
             </div>
-            <div class="second-row">
-                <div class="prenota"></div>
-                <div class="button-prenota"></div>
-            </div>
         </div>
+        <section class="prove">
+            <div class="container">
+
+                <div class="indication">
+                    <span>Porta DropBox Business nella tua azienda</span>
+                </div>
+                <div class="button-rove"> <button class="btn ">Fai ora la tua prova Gratuita </button></div>
+
+            </div>
+        </section>
     </section>
     <section class="ask">
-        <h1 class="ask-title">Domande frequenti</h1>
-        <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?</div>
-        <div class="question"></div>
-        <div class="question"></div>
+        <div class="container">
+            <h1 class="ask-title">Domande frequenti</h1>
+            <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?</div>
+            <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?</div>
+            <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?</div>
+        </div>
+
     </section>
 </main>
 <footer class="footer">
