--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         </section>
         <section class="pass">
             <div class="container">
-                <h1>Più di 500.000 team utilizzano Dropbox Business</h1>
+                <h2>Più di 500.000 team utilizzano <br> Dropbox Business</h2>
                 <a href="#">scopri di più sui nostri clienti</a>
             </div>
         </section>
@@ -279,20 +279,24 @@
                     <div class="column-right">sssss</div>
                 </div>
             </div>
-            <section class="prove">
+            <section class="Prove">
                 <div class="container">
+                    <div class="prove-container">
+                        <div class="indication">
+                            <h2>Porta DropBox Business <br> nella tua azienda</h2>
+                        </div>
+                        <div class="button-prove"> <button class="btn prove">Fai ora la tua prova Gratuita </button></div>
 
-                    <div class="indication">
-                        <span>Porta DropBox Business nella tua azienda</span>
                     </div>
-                    <div class="button-rove"> <button class="btn ">Fai ora la tua prova Gratuita </button></div>
+
 
                 </div>
             </section>
         </section>
+        <!--ASK-->
         <section class="ask">
             <div class="container">
-                <h1 class="ask-title">Domande frequenti</h1>
+                <h2 class="ask-title">Domande frequenti</h2>
                 <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?</div>
                 <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?</div>
                 <div class="question">Qual'è la differenza tra DropBox Business e DropBox Advanced?</div>
@@ -309,7 +313,9 @@
 
                     <nav class="nav-footer">
                         <ul class="link-list">
-                            <li class="footer-items-title"><h3>Dropbox</h3></li>
+                            <li class="footer-items-title">
+                                <h3>Dropbox</h3>
+                            </li>
 
                             <li class="footer-items"><a href="#">Applicazione desktop</a></li>
                             <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
@@ -320,32 +326,24 @@
                     </nav>
                     <nav class="nav-footer">
                         <ul class="">
-                            <li class="footer-items-title"><h3>Prodotti</h3></li>
+                            <li class="footer-items-title">
+                                <h3>Prodotti</h3>
+                            </li>
 
                             <li class="footer-items"><a href="#">Applicazione desktop</a></li>
                             <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
                             <li class="footer-items"><a href="#">Piani</a></li>
                             <li class="footer-items"><a href="#">Sicurezza</a></li>
                             <li class="footer-items"><a href="#">Funzioni</a></li>
-                           
+
                         </ul>
                     </nav>
                     <nav class="nav-footer">
                         <ul class="">
 
-                            <li class="footer-items-title"><h3>Azienda</h3></li>
-
-                            <li class="footer-items"><a href="#">Applicazione desktop</a></li>
-                            <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
-                            <li class="footer-items"><a href="#">Piani</a></li>
-                            <li class="footer-items"><a href="#">Sicurezza</a></li>
-                            <li class="footer-items"><a href="#">Funzioni</a></li>
-                        </ul>
-                    </nav>
-                    <nav class="nav-footer">
-                        <ul class="">
-
-                            <li class="footer-items-title"><h3>Supporto</h3></li>
+                            <li class="footer-items-title">
+                                <h3>Azienda</h3>
+                            </li>
 
                             <li class="footer-items"><a href="#">Applicazione desktop</a></li>
                             <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
@@ -357,7 +355,23 @@
                     <nav class="nav-footer">
                         <ul class="">
 
-                            <li class="footer-items-title"><h3>Community</h3></li>
+                            <li class="footer-items-title">
+                                <h3>Supporto</h3>
+                            </li>
+
+                            <li class="footer-items"><a href="#">Applicazione desktop</a></li>
+                            <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
+                            <li class="footer-items"><a href="#">Piani</a></li>
+                            <li class="footer-items"><a href="#">Sicurezza</a></li>
+                            <li class="footer-items"><a href="#">Funzioni</a></li>
+                        </ul>
+                    </nav>
+                    <nav class="nav-footer">
+                        <ul class="">
+
+                            <li class="footer-items-title">
+                                <h3>Community</h3>
+                            </li>
 
                             <li class="footer-items"><a href="#">Applicazione desktop</a></li>
                             <li class="footer-items"><a href="#">Perchè Dropbox</a></li>
